--- a/workflow-template/cicd-[container name]-[environment].template.yaml
+++ b/workflow-template/cicd-[container name]-[environment].template.yaml
@@ -28,35 +28,30 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: environment provisioning
+      - id: provision-environment
+        name: Provision environment
         run: echo "provision environment"
   build:
     runs-on: ubuntu-latest
     needs: provision-environment
     steps:
-      - id: Checkout
+      - id: checkout
         name: Checkout the source code.
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - id: pre-build
-        name: pre-build (optional)
+      - id: setup
+        name: Setup
         run: echo "pre-build"
       - id: build
-        name: build
+        name: Build the code
         run: echo "build"
-      - id: pre-test
-        name: pre-test (optional)
-        run: echo "pre-test"
-      - id: test
-        name: test
+      - id: unit-test
+        name: Run unit tests
         run: echo "test"
-      - id: package
-        name: package
-        run: echo "package"
-      - id: upload
-        name: upload to nexus
-        uses: action/eng-cicd-upload-nexus-maven@v1
+      - id: publish
+        name: Publish artifact
+        uses: publish-devfactory-nexus@v1
         with:
           serverUrl: https://nexus.devfactory.com/
           username: $NEXUS_USERNAME
@@ -70,15 +65,22 @@ jobs:
     needs: build
     steps:
       - id: deploy
-        name: deploy the application
+        name: Deploy the application
         run: echo "deploy to $DEPLOY_ENV environment"
+  integration-test:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:        
+      - id: integration-test
+      - name: Run the integration test
+        run: echo "run integration test"
   healthcheck:
     runs-on: ubuntu-latest
     needs: deploy
     steps:        
-      - id: healthcheck
-        name: Check the deployed service URL
-        uses: action/eng-cicd-healthcheck-api@v2
+      - id: health-check
+        name: Check the deployed service
+        uses: healthcheck-httpStatus@v1
         with:
           # Check the following URLs one by one sequentially
           url: https://example.com|http://example.com
@@ -90,10 +92,3 @@ jobs:
           retry-delay: 5s # Optional, only applicable to max-attempts > 1
           # Retry all errors, including 404. This option might trigger curl upgrade.
           retry-all: no # Optional, defaults to "no"
-  integration-test:
-    runs-on: ubuntu-latest
-    needs: healthcheck
-    steps:        
-      - id: integration-test
-      - name: Run the integration test
-        run: echo "run integration test"
