--- a/workflow-template/cicd-[container name]-distributable-artifact.template.yaml
+++ b/workflow-template/cicd-[container name]-distributable-artifact.template.yaml
@@ -50,7 +50,7 @@ jobs:
           filename: ./target/app-1.0.0.jar
   health-check:
     runs-on: ubuntu-latest
-    needs: package
+    needs: build
     steps:
     - id: health-check
       name: Check the published package
