--- a/workflow-template/cicd-[container name]-distributable-artifact.template.yaml
+++ b/workflow-template/cicd-[container name]-distributable-artifact.template.yaml
@@ -13,8 +13,8 @@ env:
   DEPLOY_ENV: "production|qa|staging"
 
 concurrency: 
-  group: ${{ github.head_ref }}
-  cancel-in-progress: true
+  group: eng-yaml
+  cancel-in-progress: false
 
 jobs:
   build:
