--- a/workflow-template/cicd-distributable-artifact-[container name].template.yaml
+++ b/workflow-template/cicd-distributable-artifact-[container name].template.yaml
@@ -53,16 +53,18 @@ jobs:
     needs: build
     steps:
     - id: health-check
-      name: Check the published package
-      uses: healthcheck-httpStatus@v1
+      name: Check the deployed service
+      uses: trilogy-group/eng.cicd.yaml.templates/actions/healthcheck-httpStatus@master
       with:
         # Check the following URLs one by one sequentially
         url: https://nexus.devfactory.com/repository/maven-releases/com/example/app/1.0.0/app-1.0.0.jar
         # Follow redirects, or just report success on 3xx status codes
-        follow-redirect: no # Optional, defaults to "no"
+        follow-redirect: false # Optional, defaults to "false"
         # Fail this action after this many failed attempts
         max-attempts: 3 # Optional, defaults to 1
         # Delay between retries
         retry-delay: 5s # Optional, only applicable to max-attempts > 1
         # Retry all errors, including 404. This option might trigger curl upgrade.
-        retry-all: no # Optional, defaults to "no"
+        retry-all: false # Optional, defaults to "false"
+        # timeout delay in seconds
+        timeout: 30s
